--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: examen_ruby_development
+  database: fullclima_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: examen_ruby_test
+  database: fullclima_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: examen_ruby_production
-  username: examen_ruby
-  password: <%= ENV["EXAMEN_RUBY_DATABASE_PASSWORD"] %>
+  database: fullclima_production
+  username: fullclima
+  password: <%= ENV["FULLCLIMA_DATABASE_PASSWORD"] %>
